starr-config/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: sonarr
      app.kubernetes.io/name: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - image: lscr.io/linuxserver/sonarr:latest
          name: sonarr
          ports:
            - containerPort: 8989 
          volumeMounts:
            - mountPath: /data
              name: media-data
      restartPolicy: Always
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
